...
                        },
                        label = {
                            Text("Título")
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("campoTitulo")
                    )

                    Spacer(modifier = Modifier.height(12.dp))

                    Text("Prioridad")

...

                    Spacer(modifier = Modifier.height(12.dp))

                    Button(
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("btnAgregar"),
                        onClick = {

                            if (titulo.isNotBlank()) {

                                tareas.add(
                                    Tarea(
...
